--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,60 @@
  * CSS GOES HERE
  */
  body {
- 	background: black;
+ 	font-family: 'Open Sans', sans-serif;
+ 	font-weight: 300;
+ }
+ #container {
+ 	max-width: 600px;
+ 	margin: 90px auto;
+ }
+ #topbar{
+ 	position: fixed;
+  	width: 100%;
+  	top: 0;
+  	left:0;
+  	padding: 0;
+  	z-index: 8000;
+ }
+ #header {
+ 	display: inline-block;
+	margin: 10px 24px 10px;
+	position: relative;
+	zoom: 1.05;
+	float: left;
+ }
+ body {
+ 	background-size: cover;
+ 	background-color: black;
+ 	color: white;
+ 	text-align: center;
+ }
+
+ img {
+ 	width: 250px;
+ }
+
+ .menu {
+ 	list-style: none;
+ 	overflow: auto;
+ 	padding: 0;
+ }
+
+ .menu li {
+ 	float: left;
+ 	margin: 5px 10px 10px 5px;
+ }
+ .menu li a {
+ 	text-decoration: none;
  	color: white;
  }
+ input{
+                border:0;
+                padding: 5px;
+                font-size: 12px;
+            }
+           
+ input[type="submit"] {
+               background: limegreen;
+               color: black;
+           }
