--- a/css/main.css
+++ b/css/main.css
@@ -50,12 +50,49 @@
  	color: white;
  }
  input{
-                border:0;
-                padding: 5px;
-                font-size: 12px;
-            }
+    border:0;
+    padding: 5px;
+    font-size: 12px;
+}
            
  input[type="submit"] {
-               background: limegreen;
-               color: black;
+    background: limegreen;
+    color: black;
            }
+/**
+ * styles for blog
+ */
+ .blog-container {
+ 	max-width: 1000px;
+ 	margin: 80px auto 20px;
+ }
+.blog-body{
+	overflow:auto;
+
+}
+.blog-title {
+	border-bottom: 1px solid white;
+	text-align: left;
+	overflow:auto;
+}
+.blog-date {
+	text-align: right;
+	margin-top: 21px;
+	float: right;
+}
+.blog-h1 {
+	margin-top: 0;
+	margin-bottom: 0;
+	float: left;
+}
+.blog-image {
+	background-size: cover;
+	height: 200px;
+	width: 25%;
+	float:left;
+	background-position: center center;
+}
+.blog-text {
+	float:right;
+	width:70%;
+}
