--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@
  }
 .blog-body{
 	overflow:auto;
-
+	margin-bottom: 40px;
 }
 .blog-title {
 	border-bottom: 1px solid white;
@@ -80,10 +80,12 @@
 	margin-top: 21px;
 	float: right;
 }
-.blog-h1 {
+.blog-title h1 {
 	margin-top: 0;
 	margin-bottom: 0;
 	float: left;
+	text-transform: uppercase;
+	font-weight: 300;
 }
 .blog-image {
 	background-size: cover;
@@ -91,6 +93,11 @@
 	width: 25%;
 	float:left;
 	background-position: center center;
+}
+@media screen and (max-width: 800px){
+	.blog-image {
+		height: 100px;
+	}
 }
 .blog-text {
 	float:right;
